--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "LLM Concator",
   "description": "Generate LLM prompts from your codebase",
   "version": "0.0.1",
+  "publisher": "MarkusReitschuster",
   "engines": {
     "vscode": "^1.89.0"
   },
